# optimal-transport-gan

./: .gitignore  .pre-commit-config.yaml  LICENSE  MODEL_CARD.md  Makefile  OT_GAN.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: ablation_table.md  headline_results.md  history_critic_sign_off.csv  history_critic_sign_on.csv  history_dcgan10.csv  history_icfm30.csv  history_loss_energy8.csv  history_loss_sinkdiv8.csv  history_otcfm30.csv
assets/finance/: reduction_table.md  stylized_facts.md
configs/: cfm_mnist.yaml  cifar10.yaml  dcgan_mnist.yaml  finance_returns.yaml  finance_smoke.yaml  mnist.yaml  smoke.yaml
examples/: returns_generation.ipynb  scenario_reduction.ipynb
otgan/: __init__.py  ablation.py  baselines.py  cfm.py  cli.py  config.py  data.py  device.py  ema.py  energy.py  lenet.py  metrics.py  models.py  paths.py  plotting.py  sinkhorn.py  trainer.py
otgan/finance/: __init__.py  config.py  evaluate.py  models1d.py  reduce.py  simulate.py  trainer.py
report/: OT_GAN_report.tex
results/eval_v2/: critic_sign_off_final.json  critic_sign_on_final.json  floor.json  icfm_nfe10.json  icfm_nfe100.json  otcfm_nfe10.json  otcfm_nfe100.json  otcfm_nfe50.json
scripts/: assemble_results.py  export_generator.py
tests/: conftest.py  test_ablation.py  test_baselines_smoke.py  test_cfm_smoke.py  test_cli.py  test_cli_finance.py  test_config.py  test_data.py  test_device.py  test_energy.py  test_finance_facts.py  test_finance_models.py  test_finance_reduce.py  test_finance_simulate.py  test_finance_trainer_smoke.py  test_lenet.py  test_metrics.py  test_metrics_unit.py  test_models.py  test_plotting.py  test_sinkhorn.py  test_sinkhorn_divergence.py  test_trainer_smoke.py  test_version.py
